--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Manrope:wght@500;600;700;800&display=swap" rel="stylesheet">
   <style>
     :root{
-      --bg:#f5f7fb;
+      --bg:#ffffff;
       --text:#0f172a;
       --muted:#475569;
       --soft:#f1f5f9;
@@ -26,7 +26,7 @@
     *,*::before,*::after{box-sizing:border-box}
     body{
       margin:0;
-      font-family: 'Inter', 'Manrope', system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      font-family:'Inter','Manrope',system-ui,-apple-system,'Segoe UI',Roboto,Arial,sans-serif;
       background:var(--bg);
       color:var(--text);
       line-height:1.6;
@@ -34,15 +34,15 @@
     }
     a{color:inherit;text-decoration:none}
     img{max-width:100%;height:auto;display:block}
-    .container{width:min(1180px, calc(100% - 40px));margin-inline:auto;}
+    .container{width:min(1140px, calc(100% - 48px));margin-inline:auto;}
 
     /* NAV */
     header{
       position:sticky;
       top:0;
       z-index:20;
-      backdrop-filter:blur(12px);
-      background:rgba(255,255,255,.92);
+      backdrop-filter:blur(10px);
+      background:rgba(255,255,255,.96);
       border-bottom:1px solid var(--line);
     }
     .nav{
@@ -60,13 +60,13 @@
       font-size:18px;
       letter-spacing:-0.03em;
     }
-    .brand img{width:150px;height:auto}
+    .brand img{width:160px;height:auto}
     .nav-links{
       display:flex;
       align-items:center;
       gap:18px;
       color:#334155;
-      font-weight:600;
+      font-weight:700;
       font-size:13px;
     }
     .lang{color:#94a3b8;font-weight:700;}
@@ -80,17 +80,17 @@
     .btn.ghost{background:#fff;border:1px solid var(--line);color:var(--text);}
 
     /* HERO */
-    .hero{padding:22px 0 36px;}
-    .hero-card{background:var(--accent);border-radius:28px;padding:28px 30px;box-shadow:var(--shadow-strong);position:relative;overflow:hidden;}
-    .hero-top{display:flex;align-items:flex-start;justify-content:space-between;gap:20px;}
+    .hero{padding:26px 0 42px;}
+    .hero-card{background:var(--accent);border-radius:28px;padding:30px 32px;box-shadow:var(--shadow-strong);position:relative;overflow:hidden;}
+    .hero-top{display:flex;align-items:flex-start;justify-content:space-between;gap:22px;}
     .hero-copy{flex:1;text-align:left;}
-    .hero h1{margin:0 0 10px;font-size:42px;line-height:1.05;font-weight:900;letter-spacing:-0.035em;}
-    .hero p{margin:0 0 16px;font-size:15px;max-width:640px;}
-    .hero-actions{display:flex;align-items:center;gap:14px;margin:10px 0 18px;flex-wrap:wrap;}
+    .hero h1{margin:0 0 12px;font-size:44px;line-height:1.05;font-weight:900;letter-spacing:-0.035em;}
+    .hero p{margin:0 0 16px;font-size:15px;max-width:660px;}
+    .hero-actions{display:flex;align-items:center;gap:14px;margin:12px 0 18px;flex-wrap:wrap;}
     .btn-lg{height:44px;padding:0 20px;font-size:14px;border-radius:999px;}
     .video-link{display:flex;align-items:center;gap:10px;font-weight:800;font-size:14px;color:var(--text);}    
-    .hero-image{margin-top:14px;display:flex;justify-content:center;}
-    .hero-image img{max-width:760px;width:100%;border-radius:22px;box-shadow:0 18px 38px rgba(0,0,0,.22);}
+    .hero-image{margin-top:18px;display:flex;justify-content:center;}
+    .hero-image img{max-width:980px;width:100%;border-radius:22px;box-shadow:0 18px 38px rgba(0,0,0,.22);}
 
     /* WHITE CARD SECTION */
     .panel{background:#fff;border-radius:22px;padding:26px;box-shadow:var(--shadow);display:grid;grid-template-columns:1fr 1fr;gap:22px;align-items:center;}
@@ -99,15 +99,15 @@
     .panel img{width:100%;}
 
     /* GREY BLOCK */
-    .section{padding:38px 0;}
+    .section{padding:42px 0;}
     .section.light{background:var(--soft);}
     .section h2{margin:0 0 16px;font-size:26px;letter-spacing:-0.02em;text-align:center;}
     .section .lead{text-align:center;color:var(--muted);max-width:760px;margin:0 auto 26px;font-size:15px;}
 
-    .cards{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:18px;}
-    .cards img{width:100%;border-radius:18px;box-shadow:0 12px 22px rgba(15,23,42,.05);background:#fff;}
+    .cards{display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:16px;justify-items:center;}
+    .cards img{width:auto;max-width:240px;border-radius:18px;box-shadow:0 12px 22px rgba(15,23,42,.05);background:#fff;}
 
-    .wide-card{background:#fff;border-radius:22px;padding:26px;box-shadow:var(--shadow);display:grid;grid-template-columns:1.3fr 1fr;gap:22px;align-items:center;}
+    .wide-card{background:#fff;border-radius:22px;padding:28px;box-shadow:var(--shadow);display:grid;grid-template-columns:1.25fr 1fr;gap:22px;align-items:center;}
     .wide-card h3{margin:0 0 10px;font-size:26px;}
     .wide-card p{margin:0;color:var(--muted);font-size:15px;}
 
