--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Manrope:wght@500;600;700;800&display=swap" rel="stylesheet">
   <style>
     :root{
-      --bg:#ffffff;
+      --bg:#f8fafc;
       --text:#0f172a;
       --muted:#475569;
       --soft:#f1f5f9;
@@ -34,15 +34,13 @@
     }
     a{color:inherit;text-decoration:none}
     img{max-width:100%;height:auto;display:block}
-    .container{width:min(1140px, calc(100% - 48px));margin-inline:auto;}
+    .container{width:min(1200px, calc(100% - 48px));margin-inline:auto;}
 
     /* NAV */
     header{
-      position:sticky;
-      top:0;
+      position:relative;
       z-index:20;
-      backdrop-filter:blur(10px);
-      background:rgba(255,255,255,.96);
+      background:#fff;
       border-bottom:1px solid var(--line);
     }
     .nav{
@@ -64,8 +62,8 @@
     .nav-links{
       display:flex;
       align-items:center;
-      gap:18px;
-      color:#334155;
+      gap:20px;
+      color:#1e293b;
       font-weight:700;
       font-size:13px;
     }
@@ -77,38 +75,41 @@
     .btn{height:38px;padding:0 16px;border-radius:999px;border:none;font-weight:800;font-size:13px;display:inline-flex;align-items:center;gap:8px;cursor:pointer;transition:.2s box-shadow,.2s transform,.2s background-color;}
     .btn.primary{background:var(--green);color:#fff;box-shadow:0 14px 28px rgba(15,106,58,.25);}
     .btn.primary:hover{background:var(--green-dark);transform:translateY(-1px);}
+    .btn.accent{background:var(--accent);color:#1f2937;box-shadow:0 14px 28px rgba(249,197,49,.45);}
+    .btn.accent:hover{background:var(--accent-strong);transform:translateY(-1px);}
     .btn.ghost{background:#fff;border:1px solid var(--line);color:var(--text);}
 
     /* HERO */
-    .hero{padding:26px 0 42px;}
-    .hero-card{background:var(--accent);border-radius:28px;padding:30px 32px;box-shadow:var(--shadow-strong);position:relative;overflow:hidden;}
-    .hero-top{display:flex;align-items:flex-start;justify-content:space-between;gap:22px;}
-    .hero-copy{flex:1;text-align:left;}
-    .hero h1{margin:0 0 12px;font-size:44px;line-height:1.05;font-weight:900;letter-spacing:-0.035em;}
-    .hero p{margin:0 0 16px;font-size:15px;max-width:660px;}
-    .hero-actions{display:flex;align-items:center;gap:14px;margin:12px 0 18px;flex-wrap:wrap;}
+    .hero{padding:32px 0 46px;}
+    .hero-card{background:var(--accent);border-radius:28px;padding:32px 38px;box-shadow:var(--shadow-strong);position:relative;overflow:hidden;}
+    .hero-top{display:flex;align-items:flex-start;gap:22px;}
+    .hero-copy{flex:1;text-align:center;max-width:820px;margin:0 auto;}
+    .hero h1{margin:0 0 14px;font-size:46px;line-height:1.02;font-weight:900;letter-spacing:-0.035em;}
+    .hero p{margin:0 0 18px;font-size:16px;max-width:800px;margin-inline:auto;}
+    .hero-actions{display:flex;align-items:center;justify-content:center;gap:14px;margin:16px 0 20px;flex-wrap:wrap;}
     .btn-lg{height:44px;padding:0 20px;font-size:14px;border-radius:999px;}
-    .video-link{display:flex;align-items:center;gap:10px;font-weight:800;font-size:14px;color:var(--text);}    
-    .hero-image{margin-top:18px;display:flex;justify-content:center;}
+    .video-link{display:flex;align-items:center;gap:10px;font-weight:800;font-size:14px;color:var(--text);}
+    .hero-image{margin-top:12px;display:flex;justify-content:center;position:relative;}
     .hero-image img{max-width:980px;width:100%;border-radius:22px;box-shadow:0 18px 38px rgba(0,0,0,.22);}
+    .badge{position:absolute;left:20px;top:20px;background:#fff;border-radius:14px;padding:12px 14px;box-shadow:var(--shadow);min-width:180px;text-align:left;}
 
     /* WHITE CARD SECTION */
-    .panel{background:#fff;border-radius:22px;padding:26px;box-shadow:var(--shadow);display:grid;grid-template-columns:1fr 1fr;gap:22px;align-items:center;}
-    .panel h3{margin:0 0 8px;font-size:24px;line-height:1.2;}
-    .panel p{margin:0;color:var(--muted);font-size:14px;}
-    .panel img{width:100%;}
+    .panel{background:#fff;border-radius:22px;padding:32px;box-shadow:var(--shadow);display:grid;grid-template-columns:1fr 1fr;gap:26px;align-items:center;}
+    .panel h3{margin:0 0 12px;font-size:26px;line-height:1.2;}
+    .panel p{margin:0;color:var(--muted);font-size:15px;}
+    .panel img{width:100%;transform:rotate(-3deg);}
 
     /* GREY BLOCK */
-    .section{padding:42px 0;}
+    .section{padding:46px 0;}
     .section.light{background:var(--soft);}
     .section h2{margin:0 0 16px;font-size:26px;letter-spacing:-0.02em;text-align:center;}
     .section .lead{text-align:center;color:var(--muted);max-width:760px;margin:0 auto 26px;font-size:15px;}
 
     .cards{display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:16px;justify-items:center;}
-    .cards img{width:auto;max-width:240px;border-radius:18px;box-shadow:0 12px 22px rgba(15,23,42,.05);background:#fff;}
+    .cards img{width:auto;max-width:260px;border-radius:18px;box-shadow:0 12px 22px rgba(15,23,42,.05);background:#fff;}
 
-    .wide-card{background:#fff;border-radius:22px;padding:28px;box-shadow:var(--shadow);display:grid;grid-template-columns:1.25fr 1fr;gap:22px;align-items:center;}
-    .wide-card h3{margin:0 0 10px;font-size:26px;}
+    .wide-card{background:#fff;border-radius:22px;padding:32px;box-shadow:var(--shadow);display:grid;grid-template-columns:1.35fr 1fr;gap:24px;align-items:center;}
+    .wide-card h3{margin:0 0 12px;font-size:26px;}
     .wide-card p{margin:0;color:var(--muted);font-size:15px;}
 
     .bullet-list{background:#fff;border-radius:18px;border:1px solid var(--line);padding:20px 22px;box-shadow:var(--shadow);}
@@ -119,7 +120,7 @@
     .awards{display:flex;flex-wrap:wrap;justify-content:center;gap:20px;margin-top:14px;}
     .awards img{border-radius:16px;box-shadow:var(--shadow);background:#fff;padding:10px;}
 
-    .cta-banner{background:var(--accent);border-radius:22px;padding:28px;box-shadow:var(--shadow-strong);text-align:center;}
+    .cta-banner{background:var(--accent);border-radius:22px;padding:30px;box-shadow:var(--shadow-strong);text-align:center;}
     .cta-banner h3{margin:0 0 10px;font-size:24px;}
     .cta-banner p{margin:0 0 16px;font-size:15px;}
 
@@ -178,22 +179,22 @@
         <div class="hero-card">
           <div class="hero-top">
             <div class="hero-copy">
-              <h1>Facturation simplifiée pour les entreprises opérant à Maurice</h1>
+              <h1>Facture.mu simplifie pour les entreprises opérant à Maurice</h1>
               <p>En quelques minutes, créez vos devis, factures et reçus pour vos clients à Maurice ou à l'international. Faites vous payer plus rapidement.</p>
               <div class="hero-actions">
-                <button class="btn primary btn-lg">14 jours d'essai</button>
+                <button class="btn accent btn-lg">14 jours d'essai</button>
                 <button class="btn ghost btn-lg">Je découvre les fonctionnalités</button>
                 <a class="video-link" href="#">▸ Lire une démo vidéo</a>
               </div>
             </div>
-            <div class="hero-badges" style="text-align:right;min-width:120px;">
-              <div style="font-weight:800;font-size:14px;">Prix de l'audience 2022</div>
-              <div style="color:#0ea5e9;font-weight:800;font-size:13px;">Winner</div>
-              <div style="margin-top:12px;font-weight:800;font-size:22px;">4.9</div>
-              <div style="color:var(--muted);font-size:13px;">de reviews</div>
-            </div>
           </div>
           <div class="hero-image" aria-label="Aperçu application">
+            <div class="badge">
+              <div style="font-weight:800;font-size:14px;">Prix de l'audience 2022</div>
+              <div style="color:#0ea5e9;font-weight:800;font-size:13px;">Winner</div>
+              <div style="margin-top:10px;font-weight:800;font-size:22px;">4.9</div>
+              <div style="color:var(--muted);font-size:13px;">Avis</div>
+            </div>
             <img src="Grupo 4948.png" alt="Captures Facture.mu">
           </div>
         </div>
@@ -217,15 +218,12 @@
 
     <section class="section light" id="fonctionnalites">
       <div class="container">
-        <h2>Un seul outil pour facturer sereinement</h2>
+        <h2>Avec Facture.mu, vous pouvez:</h2>
         <p class="lead">Que vous facturiez en MUR, USD, EUR, ou autres devises, nous vous couvrons.</p>
         <div class="cards">
           <img src="Componente 1 – 21.png" alt="Créez vos factures en ligne">
           <img src="Componente 1 – 22.png" alt="Conception intuitive et en quelques clics">
           <img src="Componente 1 – 23.png" alt="Gérez vos factures">
-          <img src="Componente 1 – 24.png" alt="Multi-devise">
-          <img src="Componente 1 – 25.png" alt="Facturation en gros volume">
-          <img src="Componente 1 – 26.png" alt="Centralisez vos factures">
         </div>
       </div>
     </section>
@@ -236,32 +234,40 @@
           <div>
             <h3>Le bon outil pour simplifier la facturation de votre entreprise</h3>
             <p>Un outil simple et intuitif pour mettre fin à vos complications de facturation. Automatiser vos relances, centraliser vos contacts et analyser vos factures.</p>
-            <div class="hero-actions" style="margin-top:16px;">
+            <div class="hero-actions" style="margin-top:16px;justify-content:flex-start;">
               <button class="btn primary btn-lg">Accès gratuit à vie</button>
               <button class="btn ghost btn-lg">Je veux voir</button>
             </div>
           </div>
           <div>
-            <img src="Imagen 85.png" alt="Aperçu tableau factures">
+            <img src="Componente 1 – 25.png" alt="Aperçu application mobile">
           </div>
         </div>
       </div>
     </section>
 
-    <section class="section">
+    <section class="section light">
       <div class="container">
-        <div class="bullet-list">
-          <div class="bullet">
-            <span class="check">✓</span>
-            <div><strong>Accès gratuit à vie pour les comptes personnels</strong>Facturez vos clients en toute simplicité, en quelques clics.</div>
+        <div class="wide-card" style="grid-template-columns:1fr 1.15fr;">
+          <div>
+            <h3>Facture.mu simplifie votre facturation depuis votre mobile!</h3>
+            <div class="bullet-list" style="margin-top:10px;">
+              <div class="bullet">
+                <span class="check">✓</span>
+                <div><strong>Accès gratuit à vie pour les comptes personnels</strong>Facturez vos clients en toute simplicité, en quelques clics.</div>
+              </div>
+              <div class="bullet">
+                <span class="check">✓</span>
+                <div><strong>Vous recherchez un logiciel de facturation adapté à Maurice ou à l'international ?</strong>Facture.mu permet de facturer dans diverses langues et devises, partout dans le monde.</div>
+              </div>
+              <div class="bullet">
+                <span class="check">✓</span>
+                <div><strong>Vous facturez en multi-devise ?</strong>Facturez dans la devise de votre client et suivez les montants équivalent dans vos devises.</div>
+              </div>
+            </div>
           </div>
-          <div class="bullet">
-            <span class="check">✓</span>
-            <div><strong>Vous recherchez un logiciel de facturation adapté à Maurice ou à l'international ?</strong>Facture.mu permet de facturer dans diverses langues et devises, partout dans le monde.</div>
-          </div>
-          <div class="bullet">
-            <span class="check">✓</span>
-            <div><strong>Vous facturez en multi-devise ?</strong>Facturez dans la devise de votre client et suivez les montants équivalent dans vos devises.</div>
+          <div>
+            <img src="Componente 1 – 24.png" alt="Facturation mobile">
           </div>
         </div>
         <div class="awards">
@@ -275,8 +281,8 @@
     <section class="section">
       <div class="container">
         <div class="cta-banner">
-          <h3>Êtes-vous prêt à passer à la vitesse supérieure ?</h3>
-          <p>L'excellence opérationnelle au service de votre croissance.</p>
+          <h3>Commencez à facturer dès aujourd'hui.</h3>
+          <p>Toujours simple, rapide et sécurisé</p>
           <button class="btn primary btn-lg">14 jours d'essai</button>
         </div>
       </div>
