--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Manrope:wght@500;600;700;800&display=swap" rel="stylesheet">
   <style>
     :root{
-      --bg:#f8fafc;
+      --bg:#f5f7fb;
       --text:#0f172a;
       --muted:#475569;
       --soft:#f1f5f9;
@@ -26,7 +26,7 @@
     *,*::before,*::after{box-sizing:border-box}
     body{
       margin:0;
-      font-family:'Inter','Manrope',system-ui,-apple-system,'Segoe UI',Roboto,Arial,sans-serif;
+      font-family: 'Inter', 'Manrope', system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
       background:var(--bg);
       color:var(--text);
       line-height:1.6;
@@ -34,13 +34,15 @@
     }
     a{color:inherit;text-decoration:none}
     img{max-width:100%;height:auto;display:block}
-    .container{width:min(1200px, calc(100% - 48px));margin-inline:auto;}
+    .container{width:min(1180px, calc(100% - 40px));margin-inline:auto;}
 
     /* NAV */
     header{
-      position:relative;
+      position:sticky;
+      top:0;
       z-index:20;
-      background:#fff;
+      backdrop-filter:blur(12px);
+      background:rgba(255,255,255,.92);
       border-bottom:1px solid var(--line);
     }
     .nav{
@@ -58,13 +60,13 @@
       font-size:18px;
       letter-spacing:-0.03em;
     }
-    .brand img{width:160px;height:auto}
+    .brand img{width:150px;height:auto}
     .nav-links{
       display:flex;
       align-items:center;
-      gap:20px;
-      color:#1e293b;
-      font-weight:700;
+      gap:18px;
+      color:#334155;
+      font-weight:600;
       font-size:13px;
     }
     .lang{color:#94a3b8;font-weight:700;}
@@ -75,41 +77,38 @@
     .btn{height:38px;padding:0 16px;border-radius:999px;border:none;font-weight:800;font-size:13px;display:inline-flex;align-items:center;gap:8px;cursor:pointer;transition:.2s box-shadow,.2s transform,.2s background-color;}
     .btn.primary{background:var(--green);color:#fff;box-shadow:0 14px 28px rgba(15,106,58,.25);}
     .btn.primary:hover{background:var(--green-dark);transform:translateY(-1px);}
-    .btn.accent{background:var(--accent);color:#1f2937;box-shadow:0 14px 28px rgba(249,197,49,.45);}
-    .btn.accent:hover{background:var(--accent-strong);transform:translateY(-1px);}
     .btn.ghost{background:#fff;border:1px solid var(--line);color:var(--text);}
 
     /* HERO */
-    .hero{padding:32px 0 46px;}
-    .hero-card{background:var(--accent);border-radius:28px;padding:32px 38px;box-shadow:var(--shadow-strong);position:relative;overflow:hidden;}
-    .hero-top{display:flex;align-items:flex-start;gap:22px;}
-    .hero-copy{flex:1;text-align:center;max-width:820px;margin:0 auto;}
-    .hero h1{margin:0 0 14px;font-size:46px;line-height:1.02;font-weight:900;letter-spacing:-0.035em;}
-    .hero p{margin:0 0 18px;font-size:16px;max-width:800px;margin-inline:auto;}
-    .hero-actions{display:flex;align-items:center;justify-content:center;gap:14px;margin:16px 0 20px;flex-wrap:wrap;}
+    .hero{padding:22px 0 36px;}
+    .hero-card{background:var(--accent);border-radius:28px;padding:28px 30px;box-shadow:var(--shadow-strong);position:relative;overflow:hidden;}
+    .hero-top{display:flex;align-items:flex-start;justify-content:space-between;gap:20px;}
+    .hero-copy{flex:1;text-align:left;}
+    .hero h1{margin:0 0 10px;font-size:42px;line-height:1.05;font-weight:900;letter-spacing:-0.035em;}
+    .hero p{margin:0 0 16px;font-size:15px;max-width:640px;}
+    .hero-actions{display:flex;align-items:center;gap:14px;margin:10px 0 18px;flex-wrap:wrap;}
     .btn-lg{height:44px;padding:0 20px;font-size:14px;border-radius:999px;}
-    .video-link{display:flex;align-items:center;gap:10px;font-weight:800;font-size:14px;color:var(--text);}
-    .hero-image{margin-top:12px;display:flex;justify-content:center;position:relative;}
-    .hero-image img{max-width:980px;width:100%;border-radius:22px;box-shadow:0 18px 38px rgba(0,0,0,.22);}
-    .badge{position:absolute;left:20px;top:20px;background:#fff;border-radius:14px;padding:12px 14px;box-shadow:var(--shadow);min-width:180px;text-align:left;}
+    .video-link{display:flex;align-items:center;gap:10px;font-weight:800;font-size:14px;color:var(--text);}    
+    .hero-image{margin-top:14px;display:flex;justify-content:center;}
+    .hero-image img{max-width:760px;width:100%;border-radius:22px;box-shadow:0 18px 38px rgba(0,0,0,.22);}
 
     /* WHITE CARD SECTION */
-    .panel{background:#fff;border-radius:22px;padding:32px;box-shadow:var(--shadow);display:grid;grid-template-columns:1fr 1fr;gap:26px;align-items:center;}
-    .panel h3{margin:0 0 12px;font-size:26px;line-height:1.2;}
-    .panel p{margin:0;color:var(--muted);font-size:15px;}
-    .panel img{width:100%;transform:rotate(-3deg);}
+    .panel{background:#fff;border-radius:22px;padding:26px;box-shadow:var(--shadow);display:grid;grid-template-columns:1fr 1fr;gap:22px;align-items:center;}
+    .panel h3{margin:0 0 8px;font-size:24px;line-height:1.2;}
+    .panel p{margin:0;color:var(--muted);font-size:14px;}
+    .panel img{width:100%;}
 
     /* GREY BLOCK */
-    .section{padding:46px 0;}
+    .section{padding:38px 0;}
     .section.light{background:var(--soft);}
     .section h2{margin:0 0 16px;font-size:26px;letter-spacing:-0.02em;text-align:center;}
     .section .lead{text-align:center;color:var(--muted);max-width:760px;margin:0 auto 26px;font-size:15px;}
 
-    .cards{display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:16px;justify-items:center;}
-    .cards img{width:auto;max-width:260px;border-radius:18px;box-shadow:0 12px 22px rgba(15,23,42,.05);background:#fff;}
+    .cards{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:18px;}
+    .cards img{width:100%;border-radius:18px;box-shadow:0 12px 22px rgba(15,23,42,.05);background:#fff;}
 
-    .wide-card{background:#fff;border-radius:22px;padding:32px;box-shadow:var(--shadow);display:grid;grid-template-columns:1.35fr 1fr;gap:24px;align-items:center;}
-    .wide-card h3{margin:0 0 12px;font-size:26px;}
+    .wide-card{background:#fff;border-radius:22px;padding:26px;box-shadow:var(--shadow);display:grid;grid-template-columns:1.3fr 1fr;gap:22px;align-items:center;}
+    .wide-card h3{margin:0 0 10px;font-size:26px;}
     .wide-card p{margin:0;color:var(--muted);font-size:15px;}
 
     .bullet-list{background:#fff;border-radius:18px;border:1px solid var(--line);padding:20px 22px;box-shadow:var(--shadow);}
@@ -120,7 +119,7 @@
     .awards{display:flex;flex-wrap:wrap;justify-content:center;gap:20px;margin-top:14px;}
     .awards img{border-radius:16px;box-shadow:var(--shadow);background:#fff;padding:10px;}
 
-    .cta-banner{background:var(--accent);border-radius:22px;padding:30px;box-shadow:var(--shadow-strong);text-align:center;}
+    .cta-banner{background:var(--accent);border-radius:22px;padding:28px;box-shadow:var(--shadow-strong);text-align:center;}
     .cta-banner h3{margin:0 0 10px;font-size:24px;}
     .cta-banner p{margin:0 0 16px;font-size:15px;}
 
@@ -179,22 +178,22 @@
         <div class="hero-card">
           <div class="hero-top">
             <div class="hero-copy">
-              <h1>Facture.mu simplifie pour les entreprises opérant à Maurice</h1>
+              <h1>Facturation simplifiée pour les entreprises opérant à Maurice</h1>
               <p>En quelques minutes, créez vos devis, factures et reçus pour vos clients à Maurice ou à l'international. Faites vous payer plus rapidement.</p>
               <div class="hero-actions">
-                <button class="btn accent btn-lg">14 jours d'essai</button>
+                <button class="btn primary btn-lg">14 jours d'essai</button>
                 <button class="btn ghost btn-lg">Je découvre les fonctionnalités</button>
                 <a class="video-link" href="#">▸ Lire une démo vidéo</a>
               </div>
             </div>
-          </div>
-          <div class="hero-image" aria-label="Aperçu application">
-            <div class="badge">
+            <div class="hero-badges" style="text-align:right;min-width:120px;">
               <div style="font-weight:800;font-size:14px;">Prix de l'audience 2022</div>
               <div style="color:#0ea5e9;font-weight:800;font-size:13px;">Winner</div>
-              <div style="margin-top:10px;font-weight:800;font-size:22px;">4.9</div>
-              <div style="color:var(--muted);font-size:13px;">Avis</div>
+              <div style="margin-top:12px;font-weight:800;font-size:22px;">4.9</div>
+              <div style="color:var(--muted);font-size:13px;">de reviews</div>
             </div>
+          </div>
+          <div class="hero-image" aria-label="Aperçu application">
             <img src="Grupo 4948.png" alt="Captures Facture.mu">
           </div>
         </div>
@@ -218,12 +217,15 @@
 
     <section class="section light" id="fonctionnalites">
       <div class="container">
-        <h2>Avec Facture.mu, vous pouvez:</h2>
+        <h2>Un seul outil pour facturer sereinement</h2>
         <p class="lead">Que vous facturiez en MUR, USD, EUR, ou autres devises, nous vous couvrons.</p>
         <div class="cards">
           <img src="Componente 1 – 21.png" alt="Créez vos factures en ligne">
           <img src="Componente 1 – 22.png" alt="Conception intuitive et en quelques clics">
           <img src="Componente 1 – 23.png" alt="Gérez vos factures">
+          <img src="Componente 1 – 24.png" alt="Multi-devise">
+          <img src="Componente 1 – 25.png" alt="Facturation en gros volume">
+          <img src="Componente 1 – 26.png" alt="Centralisez vos factures">
         </div>
       </div>
     </section>
@@ -234,40 +236,32 @@
           <div>
             <h3>Le bon outil pour simplifier la facturation de votre entreprise</h3>
             <p>Un outil simple et intuitif pour mettre fin à vos complications de facturation. Automatiser vos relances, centraliser vos contacts et analyser vos factures.</p>
-            <div class="hero-actions" style="margin-top:16px;justify-content:flex-start;">
+            <div class="hero-actions" style="margin-top:16px;">
               <button class="btn primary btn-lg">Accès gratuit à vie</button>
               <button class="btn ghost btn-lg">Je veux voir</button>
             </div>
           </div>
           <div>
-            <img src="Componente 1 – 25.png" alt="Aperçu application mobile">
+            <img src="Imagen 85.png" alt="Aperçu tableau factures">
           </div>
         </div>
       </div>
     </section>
 
-    <section class="section light">
+    <section class="section">
       <div class="container">
-        <div class="wide-card" style="grid-template-columns:1fr 1.15fr;">
-          <div>
-            <h3>Facture.mu simplifie votre facturation depuis votre mobile!</h3>
-            <div class="bullet-list" style="margin-top:10px;">
-              <div class="bullet">
-                <span class="check">✓</span>
-                <div><strong>Accès gratuit à vie pour les comptes personnels</strong>Facturez vos clients en toute simplicité, en quelques clics.</div>
-              </div>
-              <div class="bullet">
-                <span class="check">✓</span>
-                <div><strong>Vous recherchez un logiciel de facturation adapté à Maurice ou à l'international ?</strong>Facture.mu permet de facturer dans diverses langues et devises, partout dans le monde.</div>
-              </div>
-              <div class="bullet">
-                <span class="check">✓</span>
-                <div><strong>Vous facturez en multi-devise ?</strong>Facturez dans la devise de votre client et suivez les montants équivalent dans vos devises.</div>
-              </div>
-            </div>
+        <div class="bullet-list">
+          <div class="bullet">
+            <span class="check">✓</span>
+            <div><strong>Accès gratuit à vie pour les comptes personnels</strong>Facturez vos clients en toute simplicité, en quelques clics.</div>
           </div>
-          <div>
-            <img src="Componente 1 – 24.png" alt="Facturation mobile">
+          <div class="bullet">
+            <span class="check">✓</span>
+            <div><strong>Vous recherchez un logiciel de facturation adapté à Maurice ou à l'international ?</strong>Facture.mu permet de facturer dans diverses langues et devises, partout dans le monde.</div>
+          </div>
+          <div class="bullet">
+            <span class="check">✓</span>
+            <div><strong>Vous facturez en multi-devise ?</strong>Facturez dans la devise de votre client et suivez les montants équivalent dans vos devises.</div>
           </div>
         </div>
         <div class="awards">
@@ -281,8 +275,8 @@
     <section class="section">
       <div class="container">
         <div class="cta-banner">
-          <h3>Commencez à facturer dès aujourd'hui.</h3>
-          <p>Toujours simple, rapide et sécurisé</p>
+          <h3>Êtes-vous prêt à passer à la vitesse supérieure ?</h3>
+          <p>L'excellence opérationnelle au service de votre croissance.</p>
           <button class="btn primary btn-lg">14 jours d'essai</button>
         </div>
       </div>
