Wire up landing page imagery

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
       justify-content:center;
     }
     .mock-dashboard{
-      width:min(520px, 100%);
+      width:min(600px, 100%);
       border-radius:16px;
       box-shadow: 0 18px 34px rgba(0,0,0,.18);
       border:3px solid rgba(255,255,255,.75);
@@ -203,7 +203,7 @@
       position:absolute;
       left:3%;
       bottom:-22px;
-      width:min(150px, 30%);
+      width:min(170px, 32%);
       border-radius:22px;
       box-shadow: 0 16px 28px rgba(0,0,0,.18);
       border:3px solid rgba(255,255,255,.8);
@@ -383,6 +383,7 @@
       min-height:260px;
       overflow:hidden;
     }
+    .feature-illustration img{max-height:340px; object-fit:contain; width:100%;}
     .feature-caption{
       color:#0f172a;
       font-weight:900;
@@ -464,7 +465,7 @@
       gap:10px;
     }
     .testi .logo img{
-      width:40px;height:40px;border-radius:12px;border:1px solid var(--line);
+      width:50px;height:50px;border-radius:12px;border:1px solid var(--line);
       object-fit:cover;
     }
     .testi .stars{font-size:13px}
@@ -630,7 +631,7 @@
     <div class="container">
       <div class="nav-inner">
         <a class="brand" href="#">
-          <img src="imagen1.png" alt="Logo">
+          <img src="logo.png" alt="Logo">
           <span>Facture.mu</span>
         </a>
 
@@ -676,9 +677,9 @@
             </div>
 
             <div class="hero-mockups" aria-label="Aperçu produit">
-              <img class="mock-dashboard" src="imagen2.png" alt="Aperçu dashboard">
-              <img class="mock-phone" src="imagen3.png" alt="Aperçu mobile">
-              <img class="mock-invoice" src="imagen4.png" alt="Aperçu facture">
+              <img class="mock-dashboard" src="Grupo 4948.png" alt="Aperçu dashboard">
+              <img class="mock-phone" src="Imagen 86.png" alt="Aperçu mobile">
+              <img class="mock-invoice" src="Imagen 88.png" alt="Aperçu facture">
               <div class="mini-bubble">Snap<br/>5 min</div>
             </div>
           </div>
@@ -702,7 +703,7 @@
     <section class="section" id="comment">
       <div class="container">
         <div class="section-title">
-          <img src="imagen1.png" alt="">
+          <img src="logo.png" alt="">
           <h2>Tout ce dont vous avez besoin pour facturer sereinement</h2>
         </div>
         <p class="lead">Une plateforme moderne pensée pour l’écosystème business mauricien et international</p>
@@ -746,7 +747,7 @@
     <section class="section" id="fonctionnalites">
       <div class="container">
         <div class="section-title">
-          <img src="imagen1.png" alt="">
+          <img src="logo.png" alt="">
           <h2>Fonctionnalités</h2>
         </div>
         <p class="lead">Une plateforme moderne pensée pour l’écosystème business mauricien et international</p>
@@ -765,7 +766,7 @@
 
           <div class="feature-main">
             <div class="feature-illustration">
-              <img src="imagen5.png" alt="Illustration fonctionnalités">
+              <img src="facture.png" alt="Illustration fonctionnalités">
             </div>
             <p class="feature-caption">Descarga tus facturas en PDF o Excel</p>
             <p class="feature-text">
@@ -781,7 +782,7 @@
     <section class="section">
       <div class="container">
         <div class="section-title">
-          <img src="imagen1.png" alt="">
+          <img src="logo.png" alt="">
           <h2>Pour votre activité</h2>
         </div>
         <p class="lead">Une plateforme moderne pensée pour l’écosystème business mauricien et international</p>
@@ -798,7 +799,7 @@
           </div>
 
           <div class="photo">
-            <img src="imagen6.png" alt="Photo activité">
+            <img src="Imagen 87.png" alt="Photo activité">
           </div>
         </div>
       </div>
@@ -808,7 +809,7 @@
     <section class="section">
       <div class="container">
         <div class="section-title">
-          <img src="imagen1.png" alt="">
+          <img src="logo.png" alt="">
           <h2>Témoignages</h2>
         </div>
         <p class="lead">Plus de 20 000 entreprises font confiance à la solution</p>
@@ -816,7 +817,7 @@
         <div class="testi-grid">
           <article class="testi">
             <div class="logo">
-              <img src="imagen7.png" alt="Logo 1">
+              <img src="Componente 1 – 21.png" alt="Logo 1">
               <div>
                 <div class="stars">★★★★★</div>
                 <div style="font-size:11px;color:var(--muted);font-weight:700;">cavallis.mu</div>
@@ -831,7 +832,7 @@
 
           <article class="testi">
             <div class="logo">
-              <img src="imagen8.png" alt="Logo 2">
+              <img src="Componente 1 – 22.png" alt="Logo 2">
               <div>
                 <div class="stars">★★★★★</div>
                 <div style="font-size:11px;color:var(--muted);font-weight:700;">nouzanimo.mu</div>
@@ -846,7 +847,7 @@
 
           <article class="testi">
             <div class="logo">
-              <img src="imagen9.png" alt="Logo 3">
+              <img src="Componente 1 – 23.png" alt="Logo 3">
               <div>
                 <div class="stars">★★★★★</div>
                 <div style="font-size:11px;color:var(--muted);font-weight:700;">vanillart.mu</div>
@@ -866,7 +867,7 @@
     <section class="cta">
       <div class="container">
         <div class="cta-box">
-          <img src="imagen1.png" alt="" style="width:26px;height:26px;margin:0 auto 10px;">
+          <img src="logo.png" alt="" style="width:26px;height:26px;margin:0 auto 10px;">
           <h3>Commencez à facturer dès aujourd’hui !</h3>
           <p>Facturez vos clients, suivez vos paiements.</p>
           <a class="btn btn-lg" href="#">Essai 15j gratuits</a>
@@ -878,7 +879,7 @@
     <section class="faq" id="faq">
       <div class="container">
         <div class="section-title">
-          <img src="imagen1.png" alt="">
+          <img src="logo.png" alt="">
           <h2>Questions fréquentes</h2>
         </div>
         <p class="lead">Posez-nous vos questions</p>
