--- a/index.html
+++ b/index.html
@@ -100,26 +100,40 @@
     }
 
     .menu-toggle{
+      position: relative;
       display:none;
       align-items:center;
       justify-content:center;
-      gap:6px;
       border:1px solid var(--border);
       background:#fff;
-      border-radius: 12px;
-      padding: 10px 12px;
+      border-radius: 14px;
+      padding: 12px;
       cursor:pointer;
-      min-width: 48px;
-      min-height: 44px;
+      min-width: 52px;
+      min-height: 52px;
+      transition: box-shadow .25s ease, transform .25s ease;
     }
 
+    .menu-toggle:hover{box-shadow: 0 10px 24px rgba(0,0,0,.08);}
+
     .menu-toggle span{
+      position: absolute;
+      left: 12px;
       display:block;
-      width:20px;
-      height:2px;
+      width:26px;
+      height:3px;
       background:#0b1220;
       border-radius:999px;
+      transition: transform .35s ease, top .35s ease, opacity .25s ease, width .35s ease;
     }
+
+    .menu-toggle span:nth-child(1){top: 18px;}
+    .menu-toggle span:nth-child(2){top: 25px;}
+    .menu-toggle span:nth-child(3){top: 32px;}
+
+    .menu-toggle.is-active span:nth-child(1){top: 25px; transform: rotate(45deg);}
+    .menu-toggle.is-active span:nth-child(2){opacity:0; transform: translateX(-6px); width: 10px;}
+    .menu-toggle.is-active span:nth-child(3){top: 25px; transform: rotate(-45deg);}
 
     @media (max-width: 900px){
       .topbar{flex-wrap:wrap;}
@@ -1506,6 +1520,7 @@
 
   menuToggle?.addEventListener('click', () => {
     const isOpen = header.classList.toggle('open');
+    menuToggle.classList.toggle('is-active', isOpen);
     menuToggle.setAttribute('aria-expanded', String(isOpen));
   });
 </script>
