Improve mobile menu layout

--- a/index.html
+++ b/index.html
@@ -173,6 +173,50 @@
       .menu-toggle{display:inline-flex;}
     }
 
+    @media (max-width: 900px){
+      header.open{
+        position: fixed;
+        inset: 0;
+        background: rgba(255,255,255,.97);
+        overflow-y: auto;
+      }
+
+      header.open .container{height:100%;}
+
+      header.open .topbar{
+        flex-direction: column;
+        align-items: stretch;
+        gap: 22px;
+        padding: 22px 0 32px;
+      }
+
+      header.open .brand{order: 1;}
+
+      header.open nav{
+        order: 2;
+        align-items: flex-start;
+        gap: 18px;
+        display: flex;
+      }
+
+      header.open nav a{font-size:16px;}
+
+      header.open .actions{
+        order: 3;
+        display: flex;
+        gap: 14px;
+      }
+
+      header.open .menu-toggle{
+        position: fixed;
+        top: 18px;
+        right: 24px;
+        display: inline-flex;
+        z-index: 40;
+        box-shadow: var(--shadow);
+      }
+    }
+
     .lang{
       display:flex;
       align-items:center;
