--- a/index.html
+++ b/index.html
@@ -1159,10 +1159,10 @@
       </button>
 
       <nav aria-label="Navigation">
-        <a href="#">Fonctionnalités</a>
+        <a href="#fonctionnalites">Fonctionnalités</a>
         <a href="#">Comment ça marche</a>
         <a href="#">Tarifs</a>
-        <a href="#">FAQ</a>
+        <a href="#faq">FAQ</a>
       </nav>
 
       <div class="actions">
@@ -1171,8 +1171,8 @@
           <span class="caret" aria-hidden="true"></span>
         </div>
 
-        <button class="link-btn">Se connecter</button>
-        <button class="btn">Créer un compte</button>
+        <a class="link-btn" href="https://app.facture.mu/">Se connecter</a>
+        <a class="btn" href="https://app.facture.mu/">Créer un compte</a>
       </div>
     </div>
   </div>
@@ -1290,7 +1290,7 @@
   </div>
 </section>
 
-<section class="functionalities">
+<section class="functionalities" id="fonctionnalites">
   <div class="container">
 
     <div class="functionalities-header">
@@ -1466,7 +1466,7 @@
   </div>
 </section>
 
-<section class="faq-section">
+<section class="faq-section" id="faq">
   <div class="container">
 
     <div class="faq-header">
@@ -1585,7 +1585,7 @@
 
       <div class="footer-column">
         <h4>Produit</h4>
-        <a href="#">Fonctionnalités</a>
+        <a href="#fonctionnalites">Fonctionnalités</a>
         <a href="#">Comment ça marche</a>
         <a href="#">Tarifs</a>
       </div>
@@ -1599,7 +1599,7 @@
 
       <div class="footer-column">
         <h4>Support</h4>
-        <a href="#">FAQ</a>
+        <a href="#faq">FAQ</a>
         <a href="#">Centre d’aide</a>
         <a href="#">État du système</a>
       </div>
