Match hero pills to design colors

--- a/index.html
+++ b/index.html
@@ -430,9 +430,9 @@
     .pill{
       padding: 14px 22px;
       border-radius: 999px;
-      border: 1px solid #eef0f3;
-      background:#f7f7f8;
-      color:#4b5563;
+      border: 1px solid #e6e6e6;
+      background:#f2f2f2;
+      color:var(--green);
       font-weight:700;
       font-size:14px;
       min-width: 190px;
@@ -1234,7 +1234,7 @@
           <small>95% des utilisateurs disent « plus rapide qu’Excel! »</small>
         </div>
 
-        <div class="pill" style="background:#eef7f1;border-color:#dbeee2;color:#1B764D;">
+        <div class="pill">
           Voir les fonctionnalités
         </div>
       </div>
