Update header buttons behavior

--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
       color:#111827;
       cursor:pointer;
       border-radius: 10px;
+      text-decoration: none;
     }
     .link-btn:hover{background:#f3f4f6}
 
@@ -259,6 +260,7 @@
       border-radius: 999px;
       cursor:pointer;
       white-space:nowrap;
+      text-decoration: none;
     }
     .btn:hover{filter:brightness(1.05)}
     .btn:active{transform:translateY(1px)}
@@ -1171,8 +1173,8 @@
           <span class="caret" aria-hidden="true"></span>
         </div>
 
-        <a class="link-btn" href="https://app.facture.mu/">Se connecter</a>
-        <a class="btn" href="https://app.facture.mu/">Créer un compte</a>
+        <a class="link-btn" href="https://app.facture.mu/" target="_blank" rel="noopener noreferrer">Se connecter</a>
+        <a class="btn" href="https://app.facture.mu/" target="_blank" rel="noopener noreferrer">Créer un compte</a>
       </div>
     </div>
   </div>
