Add link for features button and expand language selector

--- a/index.html
+++ b/index.html
@@ -1170,6 +1170,8 @@
       <div class="actions">
         <div class="lang" role="button" tabindex="0" aria-label="Langue">
           <span class="flag">🇫🇷</span>
+          <span class="flag">🇬🇧</span>
+          <span class="flag">🇲🇺</span>
           <span class="caret" aria-hidden="true"></span>
         </div>
 
@@ -1236,9 +1238,9 @@
           <small>95% des utilisateurs disent « plus rapide qu’Excel! »</small>
         </div>
 
-        <div class="pill">
+        <a class="pill" href="#fonctionnalites">
           Voir les fonctionnalités
-        </div>
+        </a>
       </div>
     </div>
   </section>
