Show language dropdown only on click

--- a/index.html
+++ b/index.html
@@ -251,8 +251,7 @@
       min-width: 160px;
       z-index: 30;
     }
-    .lang:focus-within .lang-menu,
-    .lang:hover .lang-menu{display:flex;}
+    .lang:focus-within .lang-menu{display:flex;}
     .lang-option{
       border:0;
       background: transparent;
