Hide language names in dropdown

--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
       background:var(--bg);
     }
 
+    .sr-only{
+      position:absolute;
+      width:1px;
+      height:1px;
+      padding:0;
+      margin:-1px;
+      overflow:hidden;
+      clip: rect(0, 0, 0, 0);
+      white-space:nowrap;
+      border:0;
+    }
+
     /* Layout helpers */
     .container{
       width: min(var(--max), calc(100% - 48px));
@@ -1215,21 +1227,21 @@
         <div class="lang" aria-label="Langue">
           <button class="lang-toggle" type="button">
             <span class="flag" aria-hidden="true">🇫🇷</span>
-            <span>Français</span>
+            <span class="sr-only">Français</span>
             <span class="caret" aria-hidden="true"></span>
           </button>
           <div class="lang-menu" role="menu">
             <button class="lang-option is-active" type="button" role="menuitem">
               <span class="flag" aria-hidden="true">🇫🇷</span>
-              <span>Français</span>
+              <span class="sr-only">Français</span>
             </button>
             <button class="lang-option" type="button" role="menuitem">
               <span class="flag" aria-hidden="true">🇬🇧</span>
-              <span>English</span>
+              <span class="sr-only">English</span>
             </button>
             <button class="lang-option" type="button" role="menuitem">
               <span class="flag" aria-hidden="true">🇲🇺</span>
-              <span>Créole</span>
+              <span class="sr-only">Créole</span>
             </button>
           </div>
         </div>
