Add margin-top to navigation styles

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
       align-items:center;
       justify-content:center;
       flex:1;
+     margin-top: 15px;
     }
     nav a{
       color:#6b7280;
