Update heading typography to Arial Rounded

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
       background:var(--bg);
     }
 
+    h1,
+    h2{
+      font-family: "Arial Rounded MT Bold", "Arial Rounded Bold", "Arial Rounded", Arial, sans-serif;
+    }
+
     .sr-only{
       position:absolute;
       width:1px;
