--- a/index.html
+++ b/index.html
@@ -1333,32 +1333,32 @@
       <div class="features-grid">
 
         <div class="feature-item">
-          <img src="Componente 1 – 21.png" alt="">
+          <img src="img-facture.png" alt="">
           <p>Devis & Factures<br>en 2 minutes</p>
         </div>
 
         <div class="feature-item">
-          <img src="Componente 1 – 26.png" alt="">
+          <img src="img-pincel.png" alt="">
           <p>Personnalisez<br>Avec votre logo</p>
         </div>
 
         <div class="feature-item">
-          <img src="Componente 1 – 22.png" alt="">
+          <img src="img-whatsapp.png" alt="">
           <p>Envoi par email<br>et WhatsApp</p>
         </div>
 
         <div class="feature-item">
-          <img src="Componente 1 – 24.png" alt="">
+          <img src="img-devises.png" alt="">
           <p>+160 devises</p>
         </div>
 
         <div class="feature-item">
-          <img src="Componente 1 – 23.png" alt="">
+          <img src="img-langues.png" alt="">
           <p>Multi-langue</p>
         </div>
 
         <div class="feature-item">
-          <img src="Componente 1 – 25.png" alt="">
+          <img src="img-relances.png" alt="">
           <p>Relances automatiques</p>
         </div>
 
