--- a/index.html
+++ b/index.html
@@ -1248,8 +1248,8 @@
           </div>
         </div>
 
-        <a class="link-btn" href="https://app.facture.mu/" target="_blank" rel="noopener noreferrer">Se connecter</a>
-        <a class="btn" href="https://app.facture.mu/" target="_blank" rel="noopener noreferrer">Créer un compte</a>
+        <a class="link-btn" href="https://facture.mu/login" target="_blank" rel="noopener noreferrer">Se connecter</a>
+        <a class="btn" href="https://facture.mu/register" target="_blank" rel="noopener noreferrer">Créer un compte</a>
       </div>
     </div>
   </div>
@@ -1283,11 +1283,12 @@
     <div class="mra">
       <img src="Imagen 85.png" alt="Mauritius Revenue Authority" style="height:64px;">
     </div>
-
+    <a class="btn" href="https://facture.mu/register" target="_blank" rel="noopener noreferrer">
       <div class="mra2">
+        
         <button class="cta">Essai 15j gratuits</button>
       </div>
-
+    </a>
   </section>
 </div>
 
