--- a/index.html
+++ b/index.html
@@ -1283,12 +1283,11 @@
     <div class="mra">
       <img src="Imagen 85.png" alt="Mauritius Revenue Authority" style="height:64px;">
     </div>
-    <a class="btn" href="https://facture.mu/register" target="_blank" rel="noopener noreferrer">
-      <div class="mra2">
-        
-        <button class="cta">Essai 15j gratuits</button>
-      </div>
-    </a>
+    <div class="mra2">
+  <button class="cta" onclick="window.open('https://facture.mu/register', '_blank', 'noopener,noreferrer')">
+    Essai 15j gratuits
+  </button>
+</div>
   </section>
 </div>
 
