--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
       gap:8px;
       cursor:pointer;
       min-width: 10px;
+      transition: background .2s ease;
     }
     .lang-toggle:focus{outline:2px solid #d1d5db; outline-offset:2px;}
     .lang-menu{
@@ -282,7 +283,7 @@
       font-weight:600;
       color:#111827;
     }
-    .lang-option:hover{background:#f3f4f6;}
+    .lang-option:hover{background: rgba(243,244,246,.7);}
     .lang-option.is-active{
       background:#eef2ff;
       color:#1f2937;
@@ -307,8 +308,9 @@
       cursor:pointer;
       border-radius: 10px;
       text-decoration: none;
+      transition: background .2s ease;
     }
-    .link-btn:hover{background:#f3f4f6}
+    .link-btn:hover{background: rgba(243,244,246,.7)}
 
     .btn{
       border:1px solid transparent;
@@ -321,8 +323,9 @@
       cursor:pointer;
       white-space:nowrap;
       text-decoration: none;
+      transition: background .2s ease, transform .2s ease;
     }
-    .btn:hover{filter:brightness(1.05)}
+    .btn:hover{background: rgba(11,18,32,.7)}
     .btn:active{transform:translateY(1px)}
 
     /* Hero */
@@ -383,8 +386,9 @@
       font-size: 14px;
       cursor:pointer;
       box-shadow: 0 10px 20px rgba(0,0,0,.12);
+      transition: background .2s ease, transform .2s ease;
     }
-    .cta:hover{filter:brightness(1.03)}
+    .cta:hover{background: rgba(27,118,77,.7)}
     .cta:active{transform:translateY(1px)}
 
    .mockup-area{
@@ -755,10 +759,11 @@
   font-size: 14px;
   cursor: pointer;
   box-shadow: 0 10px 20px rgba(0,0,0,.12);
+  transition: background .2s ease, transform .2s ease;
 }
 
 .activity-cta:hover{
-  filter: brightness(1.05);
+  background: rgba(27,118,77,.7);
 }
 
 .activity-image img{
@@ -890,10 +895,11 @@
   border-radius: 999px;
   cursor: pointer;
   box-shadow: 0 12px 25px rgba(0,0,0,.15);
+  transition: background .2s ease, transform .2s ease;
 }
 
 .final-cta-btn:hover{
-  filter: brightness(1.05);
+  background: rgba(27,118,77,.7);
 }
 
 .final-cta-btn:active{
