--- a/index.html
+++ b/index.html
@@ -1282,7 +1282,7 @@
     <!-- MOCKUP FLOTA -->
     <div class="hero-mockup-wrapper">
       <div class="" aria-hidden="true"></div>
-      <img class="mockup" src="Grupo 4948.png" alt="Interface Facture.mu">
+      <img class="mockup" src="screens.png" alt="Interface Facture.mu">
     </div>
 
     <!-- LOGO MRA -->
