--- a/index.html
+++ b/index.html
@@ -1272,7 +1272,7 @@
       </h1>
 
       <p>
-        Créez, envoyez et suivez vos factures en quelques clics. Professionnel, multilingue,
+        Créez, envoyez et suivez vos factures en quelques clics. <br/>Professionnel, multilingue,
         multi-devises.
       </p>
 
