--- a/index.html
+++ b/index.html
@@ -385,12 +385,12 @@
     .cta:hover{background: rgba(27,118,77,.7)}
     .cta:active{transform:translateY(1px)}
 
-    /* “sombra” del mockup */
+    /* “shadow” del mockup */
     .mockup-shadow{
       position:absolute;
       bottom:-12px;
       width: 74%;
-      height: 36px;
+      height: 22px;
       background: rgba(0,0,0,.18);
       filter: blur(18px);
       border-radius: 999px;
@@ -400,7 +400,7 @@
     .mockup{
       position:relative;
       z-index: 1;
-      width: min(720px, 100%);
+      width: min(500px, 100%);
       height: auto;
       display:block;
       border-radius: 14px;
