--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
 
     /* Below hero section */
     .below{
-      padding: 50px 0 70px;
+      padding: 130px 0 70px 0;
       text-align:center;
     }
     .below .title{
